# soft-net

./: README.html  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: classifier.md  estimator.md  image_classifier.md  presets.md  regressor.md
docs/guide/: image.md  installation.md  presets.md  quickstart.md  tabular.md  tips.md
docs/stylesheets/: extra.css
examples/: 01_binary_classification.py  02_multiclass.py  03_image_classification.py  04_backbone_registry.py  05_credit_fraud.py  06_iris_multiclass.py  07_leaf_encoding_fraud.py  08_pipeline_save_load.py
softnet/: __init__.py  pipeline.py  presets.py  presets.toml
softnet/base/: __init__.py  config.py  estimator.py
softnet/image/: __init__.py  backbones.py  classifier.py
softnet/inference/: __init__.py  resolver.py  task.py
softnet/tabular/: __init__.py  classifier.py  regressor.py
softnet/workflows/: __init__.py  presets.toml  registry.py  steps.py  workflow.py
tests/: test_config_resolver.py  test_task_inference.py
