[project]
name = "soft-net"
version = "0.1.0"
description = "sklearn-compatible deep learning framework with smart defaults and Keras backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "soft-net contributors" }]

dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "keras>=3.0",
    "tensorflow>=2.15",
]

[project.optional-dependencies]
image = [
    "pillow>=10.0",
    "opencv-python>=4.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-autorefs>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["softnet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
